--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ body {
 /* ===== RESPONSIVE ===== */
 @media (max-width: 768px) {
   .menu-box {
-    right: -20px;
+    left: 400px;
     top: 5px;  
     width: 56px;
     height: 56px;
@@ -875,6 +875,7 @@ background-color: #0b1d3a;
   font-size: 14px;
   color: #f1c27d;
 }
+
 
 
 
